feat: mongo fetching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Scrum Sphere
+spring.data.mongodb.uri=mongodb+srv://nikhilanand1006:${MONGO_DB_PASSWORD}@scrumspherecluster0.j9fo7.mongodb.net/?retryWrites=true&w=majority&appName=ScrumSphereCluster0
+spring.data.mongodb.database=scrumsphere
