--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=Scrum Sphere
 spring.data.mongodb.uri=mongodb+srv://nikhilanand1006:${MONGO_DB_PASSWORD}@scrumspherecluster0.j9fo7.mongodb.net/?retryWrites=true&w=majority&appName=ScrumSphereCluster0
 spring.data.mongodb.database=scrumsphere
 spring.data,mongodb.auto-index-creation=true
+spring.jackson.serialization.write-dates-as-timestamps=false
