--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.uri=mongodb+srv://nikhilanand1006:${MONGO_DB_PASSWORD}@scrum
 spring.data.mongodb.database=scrumsphere
 spring.data,mongodb.auto-index-creation=true
 spring.jackson.serialization.write-dates-as-timestamps=false
+server.servlet.context-path=/scrumsphere-server
